--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td>Length 15.5Dcm x Width 14Hcm x Height 34TLcm</td>
+                    <td>Dia 15.5cm x Height 14cm</td>
                 </tr>
                 <tr>
                     <th>Product CBM</th>
@@ -165,7 +165,7 @@
                 </tr>
                 <tr>
                     <th>Carton Size</th>
-                    <td>Length 74cm x Width 37cm x Height 17.5cmcm</td>
+                    <td>Length 74cm x Width 37cm x Height 17.5cm</td>
                 </tr>
                 <tr>
                     <th>Carton Quantity</th>
@@ -208,3 +208,4 @@
     </div>
 </body>
 </html>
+
